margin & logo fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,22 @@ body {
   justify-content: center;
   font-size: 16px;
 }
+
+@media (max-width: 576px) {
+  .profile__info,
+  .views,
+  .experienceList,
+  .educationList {
+    margin-left: 0;
+  }
+
+  .education__infoIcon {
+    position: relative;
+    top: 20px;
+  }
+
+  /* fix this soon */
+  .header__logo {
+    display: none;
+  }
+}
